src/objects/Territory__c.object
<CustomObject>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Child Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Type__c</fullName>
        <label>Territory Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Zip Code</fullName>
                </value>
                <value>
                    <fullName>Municipality</fullName>
                    <isActive>false</isActive>
                    <label>Municipality</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Territory__c</columns>
        <columns>Territory_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>